Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <h1 class="company-name">Quero+ viagens</h1>
         <p class="slogan">
-          Seu sonho é o nosso destino! 🌍Planeje sua viagem com economia e
+          Seu sonho é o nosso destino!🌍 Planeje sua viagem com economia e
           segurança.
         </p>
       </header>
@@ -57,7 +57,7 @@
           id="promocoes-btn"
         >
           <div class="button-content">
-            <p class="button-text">Grupo de promoções</p>
+            <p class="button-text">Grupo de promoções ✈️</p>
           </div>
         </a>
       </main>
@@ -73,3 +73,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
