Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             />
           </div>
         </div>
-        <h1 class="company-name">Quero+ viagens</h1>
+        <h1 class="company-name">Quero+ Viagens</h1>
         <p class="slogan">
           Seu sonho é o nosso destino!🌍 Planeje sua viagem com economia e
           segurança.
@@ -73,4 +73,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
